Fixed drop down menu in dark mode

--- a/src/assets/scss/paper-kit/_navbars.scss
+++ b/src/assets/scss/paper-kit/_navbars.scss
@@ -235,6 +235,7 @@
             }
         }
         & .dropdown-item {
+          background-color: rgba(17, 17, 17, 0.8);
           color: rgba(255, 255, 255, 0.9) !important;
             i{
                 margin: 0 10px;
